color , spacing , menu fix + slideshow try

--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,19 @@ a {
   color: white;
 }
 
+.body {
+  overflow-x: hidden;
+}
+
 .btnPlus , .btndel {
   margin-top: 22px;
   margin-bottom: 11px;
 }
+
+.carousel-inner{
+  margin: 0!important;
+}
+
 .contact a p i {
 margin-left: 1em;
 }
@@ -23,12 +32,15 @@ margin-left: 1em;
   display: grid;
 }
 
-  
+
 
 #formActiv {
   visibility: hidden;
 }
 
+.footerMenu{
+  background-color:#17181E;
+}
 
 .fa-instagram{
  color:#e4405f;
